--- a/template/app/views/layouts/secondary.hbs
+++ b/template/app/views/layouts/secondary.hbs
@@ -1,12 +1,12 @@
 <html>
 <head>
   <title>Secondary - {{title}}</title>
-  <link crossorigin="anonymous" href="/application.css" media="all" rel="stylesheet" />
+  <link crossorigin="anonymous" href="/app.css" media="all" rel="stylesheet" />
 </head>
 <body>
   {{{contents}}}
 
   {{> footer}}
-  <script src="/application.umd.js"></script>
+  <script src="/app.umd.js"></script>
 </body>
 </html>
