Add scss stylesheet to the template layouts

--- a/template/app/views/layouts/secondary.hbs
+++ b/template/app/views/layouts/secondary.hbs
@@ -2,6 +2,7 @@
 <head>
   <title>Secondary - {{title}}</title>
   <link crossorigin="anonymous" href="/app.css" media="all" rel="stylesheet" />
+  <link crossorigin="anonymous" href="/styles.css" media="all" rel="stylesheet" />
 </head>
 <body>
   {{{contents}}}
